--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>HelpINeedSomebody</title>
 </head>
 <body>
-    <h1>My first website</h1>
-    <p>I don't know what I'm doing</p>
+    <h1>Slay Soccer</h1>
+    <p>Soccer is a multiplayer team sport where two teams compete against eachother</p>
+    <img src="soccer.jpg" />
 </body>
 </html>
