--- a/tennis.html
+++ b/tennis.html
@@ -29,8 +29,8 @@
     <a id=" rulesOfTennis" href = "https://youtu.be/S9DnaBlhlVI" >Watch a video on how to play by clicking here!</a>
     <h3>Common moves/penalties</h3>
     <ul>
-        <li>Hand ball: this occurs when someones hand (excluding the goalie) touches the ball this typically results in a free kick</li>
-        <li>Out: this occurs when the ball crosses the field perimiter lines, resulting in a kick in or a throw in</li>
+        <li>Serve: this occurs at the start of a play. The player serves by throwing the ball in the air and hitting it.</li>
+        <li>Groundstroke: this happens after the ball has already bounced and can either be forehand or backhand</li>
         <li>Corner kick: this occurs when the ball is kicked out of bounds across the end line by the team who's goal is at that end</li>
         <li>Goal kick: this occurs when the opponent kicks the ball out across the line of the opposing end of the field</li>
         <li>Free kick: this occurs when a penalty is called and the team who was not penalized gets to kick the ball without player intervention</li>
