--- a/sportsTest.html
+++ b/sportsTest.html
@@ -7,6 +7,8 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <a id = "home" href = index.html >Slay Sports</a>
+  <h1>Take a persdonality quiz to determine a suitable sport</h1>
+
 </body>
 </html>
