spelling is hard

--- a/sportsTest.html
+++ b/sportsTest.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <a id = "home" href = index.html >Slay Sports</a>
-  <h1>Take a persdonality quiz to determine a suitable sport</h1>
+  <h1>Take a personality quiz to determine a suitable sport</h1>
 
 </body>
 </html>
