--- a/sportsTest.html
+++ b/sportsTest.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <a id = "home" href = index.html >Slay Sports</a>
+  <a id = "backToHome" href = index.html >Slay Sports</a>
   <h1>Take a personality quiz to determine a suitable sport</h1>
 
 </body>
