--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <a id = "linkToTest" href = sportsTest.html>Find Out Your Sport</a>
 
     <div class="dropdown">
-      <button class="dropbtn">Dropdown</button>
+      <button class="dropbtn">Sports</button>
+      <p></p>
       <div class="dropdown-content">
         <a id = "linkToSoccer" href = soccer.html >Soccer</a>
         <a id = "linkToTennis" href = tennis.html >Tennis</a>
