--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <p>   </p>
     <a id = "linkToTest" href = sportsTest.html>Find Out Your Sport</a>
     <br>
+    <p>or a select a sport: </p>
+    <br>
     <div class="dropdown">
       <button class="dropbtn">Sports</button>
       <div class="dropdown-content">
