--- a/sportsTest.html
+++ b/sportsTest.html
@@ -4,11 +4,28 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Sports Quiz</title>
 </head>
 <body>
   <a id = "backToHome" href = index.html >Slay Sports</a>
-  <h1>Take a personality quiz to determine a suitable sport</h1>
+
+  <div class = "container">
+      <div id="question-container" class="hide">
+        <div id="question">Question</div>
+        <div id="answer-buttons" class="btn-grid">
+          <button class="btn">Answer 1</button>
+          <button class="btn">Answer 2</button>
+          <button class="btn">Answer 3</button>
+          <button class="btn">Answer 4</button>
+        </div>
+      </div>
+      <div class="controls">
+        <button id="startbutton" class="start-btn btn">Start</button>
+        <button id="nextbutton" class="next-btn btn hide">Next</button>
+      </div>
+  </div>
+
+  
 
 </body>
 </html>
