--- a/sportsTest.html
+++ b/sportsTest.html
@@ -4,13 +4,19 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="test.css" rel="stylesheet">
+  <script defer src="script.js"></script>
   <title>Sports Quiz</title>
+
 </head>
 <body>
-  <a id = "backToHome" href = index.html >Slay Sports</a>
+  
+  
+  <br>
 
   <div class = "container">
       <div id="question-container" class="hide">
+        <a id = "backToHome" href = index.html >Slay Sports</a>
         <div id="question">Question</div>
         <div id="answer-buttons" class="btn-grid">
           <button class="btn">Answer 1</button>
