--- a/soccer.html
+++ b/soccer.html
@@ -35,7 +35,7 @@
         <li>Free kick: this occurs when a penalty is called and the team who was not penalized gets to kick the ball without player intervention</li>
         <li>Penalty kick: this occurs when there is a penalty in the goalie box, resulting in the ball being placed a line in the box and kicked</li>
     </ul>
-    <p></p>
+    <h2>Practice kicking the ball into the net!</h2>
     <iframe src="https://scratch.mit.edu/projects/666364685/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </body>
 </html>
