--- a/tennis.html
+++ b/tennis.html
@@ -31,8 +31,9 @@
     <ul>
         <li>Serve: this occurs at the start of a play. The player serves by throwing the ball in the air and hitting it.</li>
         <li>Groundstroke: this happens after the ball has already bounced and can either be forehand or backhand</li>
+        <li>Out ball: an out ball occurs when the entirety of the ball is outside of the white perimiter or the court. This results in another serve</li>
     </ul>
-    <p></p>
-    <iframe src="https://scratch.mit.edu/projects/666364685/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+    <h2>Practice volleying the ball back and forth!</h2>
+    <iframe src="https://scratch.mit.edu/projects/666406022/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </body>
 </html>
