Added and compleated bowling page

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <div class="dropdown-content">
         <a id = "linkToSoccer" href = soccer.html >Soccer</a>
         <a id = "linkToTennis" href = tennis.html >Tennis</a>
+        <a id = "linkToBowling" href = bowling.html >Bowling</a>
       </div>
     </div>
     
