--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <a id = "linkToSoccer" href = soccer.html >Soccer</a>
         <a id = "linkToTennis" href = tennis.html >Tennis</a>
         <a id = "linkToBowling" href = bowling.html >Bowling</a>
+        <a id = "linkToLacrosse" href = lacrosse.html >Lacrosse</a>
       </div>
     </div>
     
