Added roller derby page content

--- a/rollerDerby.html
+++ b/rollerDerby.html
@@ -13,23 +13,24 @@
     <a id = "linkToHome" href = index.html >Slay Sports</a>
     <h2>Roller Derby is a very slay sport.</h2>
     <img id = "rDerbyBase" src="https://images.squarespace-cdn.com/content/v1/53ce8a4ae4b02facb941faed/1619047325984-CXU6VMCT9JK1XD311IL8/blog-name-change-david-dyte.png?format=1000w">
-    <p>Roller derby is a team, contact sport, with typically 5 people on the track for each team. Roller derby is played on tracks, traditionally this track was slanted (or banked) however, few teams still play on this type of track, most play on flat tracks. Games consist of jams, or mini games, that last up to two minutes, with an unlimited number of jams in each game providing they do not exceed the 30 minute halfs. Teams score points when their jammer passes the opposing blockers.</p>
-    <p>There are two main positions for skaters:</p>
+    <p>Roller derby is a team, contact sport, with typically 5 people on the track for each team all being on roller skates. Roller derby is played on tracks, traditionally this track was slanted (or banked) however, few teams still play on this type of track, most play on flat tracks. Games consist of jams, or mini games, that last up to two minutes, with an unlimited number of jams in each game providing they do not exceed the 30 minute halfs. Teams score points when their jammer passes the opposing blockers.</p>
+    <p>There are 3 positions for skaters:</p>
     <ul>
         <li>    Jammer: the jammer is idenitfied at the beginning of every jam by the star on their helmet. The jammer trys to get their hips past as many of the opposing blockers as they can to score points for their team.</li>
         <li>    Blockers: the blockers try to simutaneously prevent the opposing jammer from getting past and assist their jammer in getting past the opposing blockers.  </li>
+        <li>    Pivot: The pivot is a blocker most of the time during play, however, the jammer can pass their star cap to the pivot during the game, making the pivot the jammer and the previous jammer a blocker.</li>
     </ul>
-    <p>A strike is pictured below</p>
-    <img id = "strikeB"src ="https://i.ytimg.com/vi/tTEZnwfHX8E/maxresdefault.jpg" >
+    <p>Track set up[ is pictured below</p>
+    <img id = "DsetUp"src ="https://library.kissclipart.com/20180926/xje/kissclipart-roller-derby-basics-clipart-roller-derby-wiring-di-bd416f5ddff86893.png" >
    <p></p>
-    <a id="rulesOfBowling" href = "https://youtu.be/QAP0FEqFEQA" >Watch a video on how to play by clicking here!</a>
-    <h3>Common stratagies</h3>
+    <a id="rulesOfRollerDerby" href = "https://youtu.be/cjkJfjTe-Ds" >Watch a video on game play by clicking here!</a>
+    <h3>Contact</h3>
     <ul>
-        <li>Where to stand: Bowlers must stand behind the line at the edge of each lane and can be  penalized for overstepping.</li>
-        <li>How to hold the ball: Bowlers should hold the ball putting their thumb in the bottom hole and two other fingers in the top holes.</li>
-        <li>How to roll the ball: Bowlers should step forward while moving their ball hand backward, then move their hand forward and release the ball.</li>
+        <li>Tripping and purposeful contact of the pack, head, or legs below midthigh are considered illeagle</li>
+        <li>A player may only block using their torso, hips, arms above the elbow, and legs above midthigh</li>
+        <li>Players may not make contact while the jammers are not trying to get through both teams' blockers</li>
+        <li>Hip checking, body checking, and body blcoking are all allowed</li>
+        <li>Because of the contact involved in roller derby, players are required to wear helmets,mouthguards knee pads, and elbow pads. </li>
     </ul>
-    <h2>Pracice rolling the ball!</h2>
-    <iframe src="https://scratch.mit.edu/projects/666439881/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </body>
 </html>
