--- a/sportsTest.html
+++ b/sportsTest.html
@@ -11,10 +11,10 @@
 </head>
 <body>
   <br>
-
+  
   <div class = "container">
       <div id="question-container" class="hide">
-        <a id = "backToHome" href = index.html >Slay Sports</a>
+        <h1><a id = "backToHome" href = index.html >Slay Sports</a></h1>
         <div id="question">Question</div>
         <div id="answer-buttons" class="btn-grid">
           <button class="btn">Answer 1</button>
@@ -24,8 +24,8 @@
         </div>
       </div>
       <div class="controls">
-        <button id="startbutton" class="start-btn btn">Start</button>
-        <button id="nextbutton" class="next-btn btn hide">Next</button>
+        <button id="start-btn" class="start-btn btn">Start</button>
+        <button id="next-btn" class="next-btn btn hide">Next</button>
       </div>
   </div>
 
