Spelling iz hrd

--- a/rollerDerby.html
+++ b/rollerDerby.html
@@ -26,7 +26,7 @@
     <a id="rulesOfRollerDerby" href = "https://youtu.be/cjkJfjTe-Ds" >Watch a video on game play by clicking here!</a>
     <h3>Contact</h3>
     <ul>
-        <li>Tripping and purposeful contact of the pack, head, or legs below midthigh are considered illeagle</li>
+        <li>Tripping and purposeful contact of the back, head, or legs below midthigh are considered illeagle</li>
         <li>A player may only block using their torso, hips, arms above the elbow, and legs above midthigh</li>
         <li>Players may not make contact while the jammers are not trying to get through both teams' blockers</li>
         <li>Hip checking, body checking, and body blcoking are all allowed</li>
