speling iz vary hard

--- a/rollerDerby.html
+++ b/rollerDerby.html
@@ -13,7 +13,7 @@
     <a id = "linkToHome" href = index.html >Slay Sports</a>
     <h2>Roller Derby is a very slay sport.</h2>
     <img id = "rDerbyBase" src="https://images.squarespace-cdn.com/content/v1/53ce8a4ae4b02facb941faed/1619047325984-CXU6VMCT9JK1XD311IL8/blog-name-change-david-dyte.png?format=1000w">
-    <p>Roller derby is a team, contact sport, with typically 5 people on the track for each team all being on roller skates. Roller derby is played on tracks, traditionally this track was slanted (or banked) however, few teams still play on this type of track, most play on flat tracks. Games consist of jams, or mini games, that last up to two minutes, with an unlimited number of jams in each game providing they do not exceed the 30 minute halfs. Teams score points when their jammer passes the opposing blockers. Players also can never move backward, only forward.</p>
+    <p>Roller derby is a team, contact sport, with typically 5 people on the track for each team all being on roller skates. Roller derby is played on tracks, traditionally this track was slanted (or banked) however, few teams still play on this type of track, most play on flat tracks. Games consist of jams, or mini games, that last up to two minutes, with an unlimited number of jams in each game providing they do not exceed the 30 minute halves. Teams score points when their jammer passes the opposing blockers. Players also can never move backward, only forward.</p>
     <p>There are 3 positions for skaters:</p>
     <ul>
         <li>    Jammer: the jammer is idenitfied at the beginning of every jam by the star on their helmet. The jammer trys to get their hips past as many of the opposing blockers as they can to score points for their team.</li>
@@ -26,11 +26,11 @@
     <a id="rulesOfRollerDerby" href = "https://youtu.be/cjkJfjTe-Ds" >Watch a video on game play by clicking here!</a>
     <h3>Contact</h3>
     <ul>
-        <li>Tripping and purposeful contact of the back, head, or legs below midthigh are considered illeagle</li>
-        <li>A player may only block using their torso, hips, arms above the elbow, and legs above midthigh</li>
+        <li>Tripping and purposeful contact of the back, head, or legs below mid thigh are considered illegle</li>
+        <li>A player may only block using their torso, hips, arms above the elbow, and legs above mid thigh</li>
         <li>Players may not make contact while the jammers are not trying to get through both teams' blockers</li>
-        <li>Hip checking, body checking, and body blcoking are all allowed</li>
-        <li>Because of the contact involved in roller derby, players are required to wear helmets,mouthguards knee pads, and elbow pads. </li>
+        <li>Hip checking, body checking, and body blocking are all allowed</li>
+        <li>Because of the contact involved in roller derby, players are required to wear helmets, mouthguards, knee pads, and elbow pads. </li>
     </ul>
     <p></p>
     <iframe src="https://scratch.mit.edu/projects/666469475/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
