added water polo page

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <a id = "linkToBowling" href = bowling.html >Bowling</a>
         <a id = "linkToLacrosse" href = lacrosse.html >Lacrosse</a>
         <a id = "linkToRDerby" href = rollerDerby.html >Roller Derby</a>
+        <a id = "linkTowaterpolo" href = waterpolo.html >Water Polo</a>
       </div>
     </div>
     
