--- a/rollerDerby.html
+++ b/rollerDerby.html
@@ -20,7 +20,7 @@
         <li>    Blockers: the blockers try to simutaneously prevent the opposing jammer from getting past and assist their jammer in getting past the opposing blockers.  </li>
         <li>    Pivot: The pivot is a blocker most of the time during play, however, the jammer can pass their star cap to the pivot during the game, making the pivot the jammer and the previous jammer a blocker.</li>
     </ul>
-    <p>Track set up[ is pictured below</p>
+    <p>Track set up is pictured below</p>
     <img id = "DsetUp"src ="https://library.kissclipart.com/20180926/xje/kissclipart-roller-derby-basics-clipart-roller-derby-wiring-di-bd416f5ddff86893.png" >
    <p></p>
     <a id="rulesOfRollerDerby" href = "https://youtu.be/cjkJfjTe-Ds" >Watch a video on game play by clicking here!</a>
