--- a/sportsTest.html
+++ b/sportsTest.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="test.css" rel="stylesheet">
+  
   <script defer src="script.js"></script>
   <title>Sports Quiz</title>
 
@@ -26,7 +27,14 @@
       <div class="controls">
         <button id="start-btn" class="start-btn btn">Start</button>
         <button id="next-btn" class="next-btn btn hide">Next</button>
+        
       </div>
+      <a id="tennis" class="btn hide" href="tennis.html">Tennis</a>
+      <a id="soccer" class="btn hide" href="soccer.html">Soccer</a>
+      <a id="bowling" class="btn hide" href="bowling.html">Bowling</a>
+      <a id="lacrosse" class="btn hide" href="lacrosse.html">Lacrosse</a>
+      <a id="roller-derby" class="btn hide" href="rollerDerby.html">Roller Derby</a>
+      <a id="water-polo" class="btn hide" href="waterpolo">Water Polo</a>
   </div>
 
   
