--- a/sportsTest.html
+++ b/sportsTest.html
@@ -34,7 +34,7 @@
       <a id="bowling" class="btn hide" href="bowling.html">Bowling</a>
       <a id="lacrosse" class="btn hide" href="lacrosse.html">Lacrosse</a>
       <a id="roller-derby" class="btn hide" href="rollerDerby.html">Roller Derby</a>
-      <a id="water-polo" class="btn hide" href="waterpolo">Water Polo</a>
+      <a id="water-polo" class="btn hide" href="waterpolo.html">Water Polo</a>
   </div>
 
   
