--- a/sportsTest.html
+++ b/sportsTest.html
@@ -27,14 +27,17 @@
       <div class="controls">
         <button id="start-btn" class="start-btn btn">Start</button>
         <button id="next-btn" class="next-btn btn hide">Next</button>
+        <button id="sport-btn" class="sport-btn btn hide"></button>
         
       </div>
-      <a id="tennis" class="btn hide" href="tennis.html">Tennis</a>
-      <a id="soccer" class="btn hide" href="soccer.html">Soccer</a>
-      <a id="bowling" class="btn hide" href="bowling.html">Bowling</a>
-      <a id="lacrosse" class="btn hide" href="lacrosse.html">Lacrosse</a>
-      <a id="roller-derby" class="btn hide" href="rollerDerby.html">Roller Derby</a>
-      <a id="water-polo" class="btn hide" href="waterpolo.html">Water Polo</a>
+      <div style="text-align: center; vertical-align: middle; font-size: 600%;">
+        <a id="tennis" class="sport-btn btn hide" href="tennis.html">Tennis</a>
+        <a id="soccer" class="sport-btn btn hide" href="soccer.html">Soccer</a>
+        <a id="bowling" class="sport-btn btn hide" href="bowling.html">Bowling</a>
+        <a id="lacrosse" class="sport-btn btn hide" href="lacrosse.html">Lacrosse</a>
+        <a id="roller-derby" class="sport-btn btn hide" href="rollerDerby.html">Roller Derby</a>
+        <a id="water-polo" class="sport-btn btn hide" href="waterpolo.html">Water Polo</a>
+    </div>
   </div>
 
   
