--- a/bowling.html
+++ b/bowling.html
@@ -25,7 +25,7 @@
     <p>A strike is pictured below</p>
     <img id = "strikeB"src ="https://i.ytimg.com/vi/tTEZnwfHX8E/maxresdefault.jpg" >
    <p></p>
-    <a id="rulesOfBowling" href = "https://youtu.be/QAP0FEqFEQA" >Watch a video on how to play by clicking here!</a>
+   <iframe width="560" height="315" src="https://www.youtube.com/embed/QAP0FEqFEQA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <h3>Common stratagies</h3>
     <ul>
         <li>Where to stand: Bowlers must stand behind the line at the edge of each lane and can be  penalized for overstepping.</li>
