--- a/tennis.html
+++ b/tennis.html
@@ -26,7 +26,7 @@
     <p>Closed and open stances are shown below</p>
     <img id = "tennisStances"src ="https://i.ytimg.com/vi/mrTag-q3F84/maxresdefault.jpg" >
    <p></p>
-    <a id="rulesOfTennis" href = "https://youtu.be/S9DnaBlhlVI" >Watch a video on how to play by clicking here!</a>
+   <iframe width="560" height="315" src="https://www.youtube.com/embed/S9DnaBlhlVI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <h3>Common moves/penalties</h3>
     <ul>
         <li>Serve: this occurs at the start of a play. The player serves by throwing the ball in the air and hitting it.</li>
