--- a/waterpolo.html
+++ b/waterpolo.html
@@ -23,7 +23,7 @@
     <p>End of pool set up is pictured below</p>
     <img id = "H2OsetUp"src ="https://www.tutorialspoint.com/water_polo/images/defensive_positions.jpg" >
    <p></p>
-    <a id="rulesOfwaterpolo" href = "https://youtu.be/g63LpPuDaxE" >Watch a video on game play by clicking here!</a>
+   <iframe width="560" height="315" src="https://www.youtube.com/embed/g63LpPuDaxE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <h3>Penalties and plays and information</h3>
     <ul>
         <li>Any player who controls the ball using two hands is given a penalty, with the exception of the goalie, provided they are within 5 meters of the goal</li>
